@@ -378,7 +378,7 @@ int ApacheRequest___parse(ApacheRequest *req)
         req->nargs = ((apr_array_header_t *)req->parms)->nelts;
     }
 
-    if (r->method_number == M_POST) {
+    if (r->method_number == M_POST || r->method_number == M_PUT || r->method_number == M_DELETE) {
         const char *ct = apr_table_get(r->headers_in, "Content-type");
         if (ct) ap_log_rerror(REQ_INFO, "content-type: `%s'", ct);
         if (ct && strncaseEQ(ct, DEFAULT_ENCTYPE, DEFAULT_ENCTYPE_LENGTH)) {
@@ -405,7 +405,7 @@ int ApacheRequest_parse_urlencoded(ApacheRequest *req)
     request_rec *r = req->r;
     int rc = OK;
 
-    if (r->method_number == M_POST) {
+    if (r->method_number == M_POST || r->method_number == M_PUT || r->method_number == M_DELETE) {
     	const char *data = NULL, *type;
     
     	type = apr_table_get(r->headers_in, "Content-Type");
